--- a/index.html
+++ b/index.html
@@ -17,57 +17,7 @@
 					<span>0:00:00</span>
 				</p>
 			</div>
-			<div class="minesweeper__field">
-				<div class="minesweeper__item open"><span>0</span></div>
-				<div class="minesweeper__item open red"><span>3</span></div>
-				<div class="minesweeper__item open green"><span>2</span></div>
-				<div class="minesweeper__item open blue"><span>1</span></div>
-				<div class="minesweeper__item open bomb"><span></span></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-				<div class="minesweeper__item"></div>
-			</div>
+			<div class="minesweeper__field"></div>
 		</div>
 	</div>
 </div>
