added popupcomponent, watch for js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <div class="container">
 	<div class="wrap">
+		<div class="popup"></div>
 		<div class="minesweeper">
 			<div class="minesweeper__top">
 				<div class="minesweeper__input">
